<resources>
    <string name="app_name">Crypto Market Cap</string>
    <string name="change_log_title">Change-log</string>
    <string name="change_log_content">\nWelcome to Crypto Market Cap !\n\nCrypto Market Cap updated to v3.3.0 here\'s changes:\n\n• Added CNY/SEK/NZD/MXN/SGD/HKD currencies\n• Duplication\'s bug in pinned coins tab fixed\n• Additional bug fixes and performance improvements\n\nNote : for better user experience, make sure to read the \"How to use\" available at the app page\n\nThis app is fully free allowing to you to get the best from this app. If you like my job you can donating to my BTC/ETH or ZEC addresses available in \"About\" panel.\n\nPlease don\'t hesitate to contact zeykit.dev@gmail.com for any issues with the app (function available in the \"About\" panel).\n</string>
    <string name="app_version">3.3.0</string>
    <string name="splash_screen_ver">Zeykit-Dev - v3.3.0</string>
    <string name="action_search">Search</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="icon">Icon</string>
    <string name="search_hint">Crypto\'s name/symbol &#8230;</string>
    <string name="receiving_data">Receiving data&#8230;</string>
    <string name="refreshing_preference_title">Refreshing Settings</string>
    <string name="auto_refresh_preference_title">Auto refresh</string>
    <string name="auto_refresh_summary">Update automatically the market cap data</string>
    <string name="auto_refresh_delay">Auto refresh delay</string>
    <string name="auto_refresh_delay_summary">Define the auto refresh delay (in seconds)</string>
    <string name="network_state_permission">You need to enable network state access permission to make this app working. Go to your apps settings to activate it.</string>
    <string name="internet_permission">You need to enable Internet access permission to make this app working. Go to your apps settings to activate it.</string>
    <string name="request_connection">You need to be connected to Wi-Fi or enable mobile data.</string>
    <string name="got_it">GOT IT</string>
    <string name="developed_by_zeykit_dev">Developed by Zeykit-Dev</string>
    <string name="market_data_from">Market cap data are from CoinMarketCap.com</string>
    <string name="join_community">Join LaBaleine : french crypto-currencies community</string>
    <string name="donate_to_developer">Donate to developer (thanks you !)</string>
    <string name="btc_address">BTC : 1JB1RS9UeYjUgZV2rJCuwWXK4fVKuJDnxG</string>
    <string name="btc">1JB1RS9UeYjUgZV2rJCuwWXK4fVKuJDnxG</string>
    <string name="eth">0xDD353AF332EB94148949a3725871649B1a491147</string>
    <string name="zec">t1LwjXxRFf8eNLcDRZS54A5ta3Q3tLbetnA</string>
    <string name="ubiq">0xF46c44b99a53cd05E9b480B2D643991911FDcA2a</string>
    <string name="eth_address">ETH : 0xDD353AF332EB94148949a3725871649B1a491147</string>
    <string name="etc_address">ETC : 0x070beae2fd4ba17e354600938d853f71efc97f88</string>
    <string name="zec_address">ZEC : t1LwjXxRFf8eNLcDRZS54A5ta3Q3tLbetnA</string>
    <string name="sc_address">SC : b9a7625b96f1af146b24de8fd485d161432eb47f68938fcf4f041de9f440f19efebdeea3fbc7</string>
    <string name="app_not_found">Unable to find a browsing app</string>
    <string name="mailing_app_not_found">Unable to find a mailing app</string>
    <string name="copied_to_clipboard">address copied to clipboard</string>
    <string name="current_version">Current version</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="currency_list_title">Default currency</string>
    <string name="currency_list_summary">Choose the currency you want to be displayed</string>
    <string name="pinned_coins">Pinned coins</string>
    <string name="array_size">Crypto-currencies list size to display</string>
    <string name="array_size_summary">Define the number of crypto-currencies that will be displayed</string>
    <string name="price">Price</string>
    <string name="volume">24H Volume</string>
    <string name="market_cap">Market Cap</string>
    <string name="circulating_supply">Circulating supply</string>
    <string name="percent_change_1h">Percent change (1H)</string>
    <string name="percent_change_24h">Percent change (24H)</string>
    <string name="percent_change_7d">Percent change (7D)</string>
    <string name="pinned">pinned !</string>
    <string name="remove">REMOVE</string>
    <string name="unpin">removed</string>
    <string name="show_more_data">Show more data</string>
    <string name="data_settings_title">Data Settings</string>
    <string name="no_panic_title">No panic mode</string>
    <string name="no_panic_switch_summary">Enable the no panic mode (remove colors)</string>
    <string name="rta_title">Rate this app</string>
    <string name="rta_message">If you enjoy using this app, would you mind taking a moment to rate it ? It won\'t take more than a minute. Thank you for your support !</string>
    <string name="rta_yes">RATE NOW</string>
    <string name="rta_no">NO, THANKS</string>
    <string name="rta_cancel">LATER</string>
    <string name="activity_to_launch">Activity to launch</string>
    <string name="activity_to_launch_summary">Choose the activity you want to start when the app is starting</string>
    <string name="total_market_cap">Total Market Cap</string>
    <string name="no_pinned_coins">No pinned coins</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="share">Share the app</string>
    <string name="rate">Rate / Check for updates</string>
    <string name="thanks_for_support">Thanks for support !</string>
    <string name="share_via">Share the app via</string>
    <string name="sharing_app_not_found">Unable to find a sharing app</string>
    <string name="share_content">Download Crypto Market Cap here</string>
    <string name="something_goes_wrong">Something goes wrong, try to refresh and check your Internet connection.</string>
    <string name="no_website">No website currently available.</string>
    <string name="github">Crypto Market Cap is an open-source app available on GitHub</string>
    <string name="launching_preference">Launching preferences</string>
    <string name="chart_history_title">Chart History</string>
    <string name="chart_history_summary">Define the start point to create the chart</string>
    <string name="min_price">Min :</string>
    <string name="max_price">Max :</string>
    <string name="price_at_point">Price at touched point :</string>
    <string name="no_chart">No chart history for this currency. You maybe can try to change the chart history\'s start point in the settings panel then retry.</string>
    <string name="coinmarketcap_error">CoinMarketCap returning an error.</string>
    <string name="always_on_title">Always on screen</string>
    <string name="always_on_summary">Define if you want to always keep your phone screen turned on during app running</string>
    <string name="billion">B</string>
    <string name="remove_all">Remove all</string>
    <string name="remove_dialog_title">Remove pinned coins list</string>
    <string name="remove_dialog_message">Are you sure you want to remove the pinned coins list ?</string>
    <string name="yes_dialog">YES</string>
    <string name="no_dialog">NO</string>
    <string name="pinned_coins_list_removed">Pinned coins list has been list removed.</string>
    <string name="pinned_coins_list_empty">Pinned coins list is empty.</string>
    <string name="close">CLOSE</string>
    <string name="one_day">1 DAY</string>
    <string name="seven_day">7 DAYS</string>
    <string name="one_month">1 MONTH</string>
    <string name="six_month">6 MONTH</string>
    <string name="one_year">1 YEAR</string>
    <string name="all_data">ALL DATA</string>
    <string name="all_data_lower">All data</string>
    <string name="main_activity">Main Activity</string>
    <string name="usd">USD</string>
    <string name="chart_preference">Chart preferences</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="horizontal_vertical">Horizontal and vertical</string>
    <string name="none">None</string>
    <string name="chart_line_title">Chart precision line</string>
    <string name="chart_line_summary">Define what type of precision line you want to be displayed in chart</string>
    <string name="how_to_use">How to use</string>
    
    <string-array name="currencies_list">
        <item>USD</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>BTC</item>
        <item>CAD</item>
        <item>JPY</item>
        <item>AUD</item>
        <item>CHF</item>
        <item>INR</item>
        <item>BRL</item>
        <item>PLN</item>
        <item>CNY</item>
        <item>SEK</item>
        <item>NZD</item>
        <item>MXN</item>
        <item>SGD</item>
        <item>HKD</item>
    </string-array>

    <string-array name="activities_list">
        <item>Main activity</item>
        <item>Pinned coins</item>
    </string-array>

    <string-array name="chart_history_list">
        <item>1 day</item>
        <item>7 days</item>
        <item>1 month</item>
        <item>6 month</item>
        <item>1 year</item>
        <item>All data</item>
    </string-array>

    <string-array name="chart_line_list">
        <item>Horizontal</item>
        <item>Vertical</item>
        <item>Horizontal and vertical</item>
        <item>None</item>
    </string-array>
</resources>
