<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/data_settings_title">

        <EditTextPreference
            android:defaultValue="100"
            android:key="array_size"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:inputType="number"
            android:title="@string/array_size"
            android:summary="@string/array_size_summary"/>

        <ListPreference
            android:defaultValue="USD"
            android:entries="@array/currencies_list"
            android:entryValues="@array/currencies_list"
            android:key="currency_list_preference"
            android:title="@string/currency_list_title"
            android:summary="@string/currency_list_summary"/>

        <ListPreference
            android:defaultValue="7 days"
            android:entries="@array/chart_history_list"
            android:entryValues="@array/chart_history_list"
            android:key="chart_history_preference"
            android:title="@string/chart_history_title"
            android:summary="@string/chart_history_summary"/>

        <SwitchPreference
            android:defaultValue="false"
            android:key="no_panic_switch"
            android:title="@string/no_panic_title"
            android:summary="@string/no_panic_switch_summary"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/launching_preference">

        <ListPreference
            android:defaultValue="Main Activity"
            android:entries="@array/activities_list"
            android:entryValues="@array/activities_list"
            android:key="launching_preference"
            android:title="@string/activity_to_launch"
            android:summary="@string/activity_to_launch_summary">
        </ListPreference>

        <SwitchPreference
            android:defaultValue="true"
            android:key="always_on_screen"
            android:title="@string/always_on_title"
            android:summary="@string/always_on_summary"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/refreshing_preference_title"
        android:key="pref_refreshing_settings">

        <SwitchPreference
            android:defaultValue="true"
            android:key="auto_refresh_switch"
            android:title="@string/auto_refresh_preference_title"
            android:summary="@string/auto_refresh_summary"/>

        <EditTextPreference
            android:defaultValue="60"
            android:key="auto_refresh_delay"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:inputType="number"
            android:title="@string/auto_refresh_delay"
            android:summary="@string/auto_refresh_delay_summary"
            android:dependency="auto_refresh_switch"/>
    </PreferenceCategory>
</PreferenceScreen>