<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/moreAboutCryptoActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark">

    <android.support.v7.widget.RecyclerView android:id="@+id/cryptoAboutRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.jjoe64.graphview.GraphView
        android:layout_width="match_parent"
        android:layout_height="200dip"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:id="@+id/graph"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center">

        <Button android:theme="@style/Base.Widget.AppCompat.Button.Borderless"
            android:padding="5dp"
            android:id="@+id/oneDayChartBtn"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:text="@string/one_day"/>

        <Button android:theme="@style/Base.Widget.AppCompat.Button.Borderless"
            android:padding="5dp"
            android:id="@+id/sevenDaysChartBtn"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/gray"
            android:clickable="true"
            android:focusable="true"
            android:textSize="12sp"
            android:text="@string/seven_day" />

        <Button android:theme="@style/Base.Widget.AppCompat.Button.Borderless"
            android:padding="5dp"
            android:id="@+id/oneMonthChartBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/gray"
            android:clickable="true"
            android:focusable="true"
            android:textSize="12sp"
            android:text="@string/one_month" />

        <Button android:theme="@style/Base.Widget.AppCompat.Button.Borderless"
            android:padding="5dp"
            android:id="@+id/sixMonthChartBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/gray"
            android:clickable="true"
            android:focusable="true"
            android:textSize="12sp"
            android:text="@string/six_month" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center">

        <Button android:theme="@style/Base.Widget.AppCompat.Button.Borderless"
            android:padding="5dp"
            android:id="@+id/oneYearChartBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/gray"
            android:clickable="true"
            android:focusable="true"
            android:textSize="12sp"
            android:text="@string/one_year" />

        <Button android:theme="@style/Base.Widget.AppCompat.Button.Borderless"
            android:padding="5dp"
            android:id="@+id/allDataChartBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/gray"
            android:clickable="true"
            android:focusable="true"
            android:textSize="12sp"
            android:text="@string/all_data"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <Button android:theme="@style/Base.Widget.AppCompat.Button.Borderless"
            android:id="@+id/cryptoAboutGotItButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorSummary"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:text="@string/close"/>
    </LinearLayout>
</LinearLayout>